# leequotes

./: LICENSE  README.md  dev-requirements.txt  pyproject.toml  update_quotes.py
leequotes/: leequotes.py  quotes.tsv
leequotes/data/: quotes.tsv
tests/: test_leequotes.py
