[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "leequotes"
version = "0.0.9"
authors = [
    {name = "Alexandre Petit", email = "lxnd@proton.me"},
]
description = "A python package that provides Bruce Lee quotes"
readme = "README.md"
keywords = ["Bruce", "Lee", "quotes", "wisdom"]
classifiers = [
    "Programming Language :: Python :: 3",
]
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lxnd-dune/leequotes"

[project.scripts]
leequote = "leequotes.leequotes:random"

[tool.black]
line-length = 120